src/test/ui/consts/control-flow/drop-fail.stock.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:8:9
   |
LL |     let x = Some(Vec::new());
   |         ^ constants cannot evaluate destructors
...
LL | };
   | - value is dropped here

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:21:9
   |
LL |     let vec_tuple = (Vec::new(),);
   |         ^^^^^^^^^ constants cannot evaluate destructors
...
LL | };
   | - value is dropped here

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:29:9
   |
LL |     let x: Result<_, Vec<i32>> = Ok(Vec::new());
   |         ^ constants cannot evaluate destructors
...
LL | };
   | - value is dropped here

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:39:9
   |
LL |     let mut tmp = None;
   |         ^^^^^^^ constants cannot evaluate destructors
...
LL | };
   | - value is dropped here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0493`.
